# dust2dusty

./: %s  .gitignore  DUST2DUST.py  README.md  REALDATA+SALT2mu.YAML  callSALT2mu.py  config_popovic2023.yml  pyproject.toml  slurm_test.job
config/: config_debass.yml  config_popovic2021.yml  config_popovic2023.yml
dust2dusty/: __init__.py  cli.py  dust2dust.py  log.py  logging.py  mcmc.py  mylogging.py  salt2mu.py  utils.py
legacy/: DUST2DUST.py  DUST2DUST_Nautilus.py  DUST2DUST_Nautilus_nopool.py  callSALT2mu.py  dust2dust_logging.py  plotter.py  runparallelemcee.py
realdata_files/: DEBUG_SUBPROCESS_LOG_DATA.STDOUT
src/dust2dusty/: __init__.py  cli.py  dust2dust.py  salt2mu.py
tests/: __init__.py  test_logging.py
worker_files/: 999_SUBPROCESS_LOG_SIM.STDOUT
